# GrabPicTureOnMultipleOS

./: GRAB.sln  README.md
GRAB/: CMakeLists.txt  GRAB.vcxproj  GRAB.vcxproj.filters  OSDETECT.h  main.cpp
